# TrimCloud

./: LICENSE  README.md  Shortener.postman_collection.json  pyproject.toml
.postman/: config.json
api/: settings.py  urls.py
postman/globals/: workspace.postman_globals.json
shortener/: admin.py  models.py  serializers.py  types.py  urls.py  utils.py  views.py
shortener/migrations/: 0001_initial.py
shortener/tests/: test_api.py  test_units.py
